# quaternionviewer

./: .gitignore  .gitmodules  0124.bat  AS.bat  AS_log15_41_01.bat  CMakeLists.txt  QuaternionViewer  QuaternionViewer.ini  QuaternionViewer20160108.7z  build.bat  client.js  index.html  main.js  null_modem.sh  serial.js  server.js  simple-tcp.py  ws.js
data/shader/: BasicLighting.fs  BasicLighting.vs  test.vs
glsl/: fragment.glsl  vertex.glsl
include/: graphics.h  object.h  quatview.h  shader.h  tcp.h  text.h  texture.h  vec.h  view.h
include.old/: graphics.h  object.h  quaternion.h  shader.h  view.h
old/src/: main.cpp
src/: gl_2_1.c  graphics.cpp  main.cpp  quatview.cpp  shader.cpp  simple-tcp.cpp  text.cpp  texture.cpp  view.cpp
src.old/: graphics.cpp  quatview.cpp  text.cpp  view.cpp
